working on updating data

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
             <div class="statistics_container">
                <div class="statistics_group">
                   <div class="stats">
-                     <p class="total total_backed">$89,914</p>
-                     <p class="stat_details">of $100,000 backed</p>
+                     <p class="stat_total total_backed">$89,914</p>
+                     <p class="stat_details amount_goal">of $100,000 backed</p>
                   </div>
 
                   <div class="stats">
-                     <p class="total total_backers">5,007</p>
+                     <p class="stat_total total_backers">5,007</p>
                      <p class="stat_details">total backers</p>
                   </div>
 
                   <div class="stats">
-                     <p class="total days_left">56</p>
+                     <p class="stat_days_left">56</p>
                      <p class="stat_details">days left</p>
                   </div>
                </div>
@@ -124,7 +124,7 @@
                         You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you'll be added to a special Backer member list.
                      </p>
                      <div class="pledge_reward">
-                        <span class="pledge_days_count">
+                        <span class="num_days_left bamboo_num_days_left pledge_days_count">
                            101
                            <span class="pledge_days_left"> left </span>
                         </span>
@@ -144,7 +144,7 @@
                         You get a Black Special Edition computer stand and a personal thank you. You'll be added to our Backer member list. Shipping is included.
                      </p>
                      <div class="pledge_reward">
-                        <span class="pledge_days_count">
+                        <span class="num_days_left black_num_days_left pledge_days_count">
                            64
                            <span class="pledge_days_left"> left </span>
                         </span>
@@ -164,7 +164,7 @@
                         You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You'll be added to our Backer member list. Shipping is included.
                      </p>
                      <div class="pledge_reward">
-                        <span class="pledge_days_count">
+                        <span class="num_days_left mahogany_num_days_left pledge_days_count">
                            0
                            <span class="pledge_days_left"> left </span>
                         </span>
@@ -253,7 +253,7 @@
                                  list.
                               </p>
 
-                              <span class="modal_pledge_days_count">
+                              <span class="num_days_left bamboo_num_days_left modal_pledge_days_count">
                                  101
                                  <span class="modal_pledge_days_left"> left </span>
                               </span>
@@ -268,7 +268,7 @@
                                  <label for="amount_bamboo_id" class="amount_label amount_bamboo">
                                     <span class="currecy_symbol">$</span>
 
-                                    <input type="number" id="amount_bamboo_id" name="amount_bamboo_inputname" class="amount_input" min="1" value="25" required />
+                                    <input type="number" id="amount_bamboo_id" name="amount_bamboo_inputname" class="amount_input" min="25" value="25" required />
                                  </label>
 
                                  <div class="continue_btn_container">
@@ -299,7 +299,7 @@
                                  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.
                               </p>
 
-                              <span class="modal_pledge_days_count">
+                              <span class="num_days_left black_num_days_left modal_pledge_days_count">
                                  64
                                  <span class="modal_pledge_days_left"> left </span>
                               </span>
@@ -314,7 +314,7 @@
                                  <label for="amount_black_id" class="amount_label amount_black">
                                     <span class="currecy_symbol">$</span>
 
-                                    <input type="number" id="amount_black_id" name="amount_black_inputname" class="amount_input" min="1" value="75" required />
+                                    <input type="number" id="amount_black_id" name="amount_black_inputname" class="amount_input" min="75" value="75" required />
                                  </label>
 
                                  <div class="continue_btn_container">
@@ -346,7 +346,7 @@
                                  included.
                               </p>
 
-                              <span class="modal_pledge_days_count">
+                              <span class="num_days_left mahogany_num_days_left modal_pledge_days_count">
                                  0
                                  <span class="modal_pledge_days_left"> left </span>
                               </span>
@@ -361,7 +361,7 @@
                                  <label for="amount_mahogany_id" class="amount_label amount_mahogany">
                                     <span class="currecy_symbol">$</span>
 
-                                    <input type="number" id="amount_mahogany_id" name="amount_black_inputname" class="amount_input" min="1" value="75" required />
+                                    <input type="number" id="amount_mahogany_id" name="amount_black_inputname" class="amount_input" min="200" value="200" required />
                                  </label>
 
                                  <div class="continue_btn_container">
