--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="statistics_container">
                <div class="statistics_group">
                   <div class="stats">
-                     <p class="stat_total total_backed">$89,914</p>
+                     <p class="stat_total total_amount_accummulated">$89,914</p>
                      <p class="stat_details amount_goal">of $100,000 backed</p>
                   </div>
 
@@ -214,10 +214,13 @@
                         </div>
 
                         <div class="pledge_amount_container">
-                           <form action="#" class="pledge_form form_noreward">
+                           <form action="/" class="pledge_form form_noreward">
                               <p class="enter_pledge_text">Enter your pledge</p>
 
                               <div class="pledge_form_input noreward_form_input">
+                                 <div class="warning">
+                                    <p>Minimum of 75</p>
+                                 </div>
                                  <label for="amount_noreward_id" class="amount_label amount_noreward">
                                     <span class="currecy_symbol">$</span>
 
@@ -225,7 +228,7 @@
                                  </label>
 
                                  <div class="continue_btn_container">
-                                    <button type="submit" id="submit_noreward" class="select_reward_btn continue_btn">Continue</button>
+                                    <button type="submit" id="submit_noreward" class="continue_btn">Continue</button>
                                  </div>
                               </div>
                            </form>
@@ -261,10 +264,14 @@
                         </div>
 
                         <div class="pledge_amount_container">
-                           <form action="#" class="pledge_form form_bamboo">
+                           <form action="/" class="pledge_form form_bamboo">
                               <p class="enter_pledge_text">Enter your pledge</p>
 
                               <div class="pledge_form_input bamboo_form_input">
+                                 <div class="warning">
+                                    <p>Minimum of 25</p>
+                                 </div>
+
                                  <label for="amount_bamboo_id" class="amount_label amount_bamboo">
                                     <span class="currecy_symbol">$</span>
 
@@ -272,7 +279,7 @@
                                  </label>
 
                                  <div class="continue_btn_container">
-                                    <button type="submit" id="submit_bamboo" class="select_reward_btn continue_btn">Continue</button>
+                                    <button type="submit" id="submit_bamboo" class="continue_btn">Continue</button>
                                  </div>
                               </div>
                            </form>
@@ -307,10 +314,13 @@
                         </div>
 
                         <div class="pledge_amount_container">
-                           <form action="#" class="pledge_form form_black">
+                           <form action="/" class="pledge_form form_black">
                               <p class="enter_pledge_text">Enter your pledge</p>
 
                               <div class="pledge_form_input black_form_input">
+                                 <div class="warning">
+                                    <p>Minimum of 75</p>
+                                 </div>
                                  <label for="amount_black_id" class="amount_label amount_black">
                                     <span class="currecy_symbol">$</span>
 
@@ -318,7 +328,7 @@
                                  </label>
 
                                  <div class="continue_btn_container">
-                                    <button type="submit" id="submit_black" class="select_reward_btn continue_btn">Continue</button>
+                                    <button type="submit" id="submit_black" class="continue_btn">Continue</button>
                                  </div>
                               </div>
                            </form>
@@ -358,6 +368,10 @@
                               <p class="enter_pledge_text">Enter your pledge</p>
 
                               <div class="pledge_form_input mahogany_form_input">
+                                 <div class="warning">
+                                    <p>Minimum of 200</p>
+                                 </div>
+
                                  <label for="amount_mahogany_id" class="amount_label amount_mahogany">
                                     <span class="currecy_symbol">$</span>
 
@@ -365,7 +379,7 @@
                                  </label>
 
                                  <div class="continue_btn_container">
-                                    <button type="submit" id="submit_mahogany" class="select_reward_btn continue_btn">Continue</button>
+                                    <button type="submit" id="submit_mahogany" class="continue_btn">Continue</button>
                                  </div>
                               </div>
                            </form>
