--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                            <span class="pledge_days_left"> left </span>
                         </span>
                         <div class="select_btn_container">
-                           <button class="select_reward_btn mahogany_reward_btn">Out of Stock</button>
+                           <button class="mahogany_reward_btn">Out of Stock</button>
                         </div>
                      </div>
                   </div>
@@ -219,7 +219,7 @@
 
                               <div class="pledge_form_input noreward_form_input">
                                  <div class="warning">
-                                    <p>Minimum of 75</p>
+                                    <p>Minimum of 1</p>
                                  </div>
                                  <label for="amount_noreward_id" class="amount_label amount_noreward">
                                     <span class="currecy_symbol">$</span>
