--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                         You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and you'll be added to a special Backer member list.
                      </p>
                      <div class="pledge_reward">
-                        <span class="num_days_left bamboo_num_days_left pledge_days_count">
-                           101
+                        <div class="num_days_left bamboo_num_days_left pledge_days_count">
+                           <span class="num_days"> 101 </span>
                            <span class="pledge_days_left"> left </span>
-                        </span>
+                        </div>
                         <div class="select_btn_container">
                            <button class="select_reward_btn bamboo_reward_btn">Select Reward</button>
                         </div>
@@ -144,10 +144,10 @@
                         You get a Black Special Edition computer stand and a personal thank you. You'll be added to our Backer member list. Shipping is included.
                      </p>
                      <div class="pledge_reward">
-                        <span class="num_days_left black_num_days_left pledge_days_count">
-                           64
+                        <div class="num_days_left black_num_days_left pledge_days_count">
+                           <span class="num_days"> 64 </span>
                            <span class="pledge_days_left"> left </span>
-                        </span>
+                        </div>
                         <div class="select_btn_container">
                            <button class="select_reward_btn black_edition_reward_btn">Select Reward</button>
                         </div>
@@ -164,12 +164,12 @@
                         You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You'll be added to our Backer member list. Shipping is included.
                      </p>
                      <div class="pledge_reward">
-                        <span class="num_days_left mahogany_num_days_left pledge_days_count">
-                           0
+                        <div class="num_days_left mahogany_num_days_left pledge_days_count">
+                           <span class="num_days"> 0 </span>
                            <span class="pledge_days_left"> left </span>
-                        </span>
+                        </div>
                         <div class="select_btn_container">
-                           <button class="mahogany_reward_btn">Out of Stock</button>
+                           <button class="select_reward_btn mahogany_reward_btn">Out of Stock</button>
                         </div>
                      </div>
                   </div>
@@ -197,7 +197,7 @@
                      <!-- no reward pledge modal -->
                      <div class="modal_pledges">
                         <div class="pledge_description_container noreward_pledge_description_container">
-                           <label for="no_reward_id" class="no_reward reward_label">
+                           <label for="no_reward_id" class="no_reward reward_label noreward_label">
                               <div class="radio_control_container"></div>
 
                               <h3 class="reward_title noreward_title">
@@ -239,9 +239,9 @@
                      <input type="radio" id="bamboo_reward_id" name="select_reward_radio" class="bamboo_radio" />
 
                      <!-- bamboo stand pledge modal -->
-                     <div class="bamboo_modal_pledges">
+                     <div class="bamboo_modal_pledges gray_out_modal">
                         <div class="pledge_description_container">
-                           <label for="bamboo_reward_id" class="bamboo_reward reward_label">
+                           <label for="bamboo_reward_id" class="bamboo_reward reward_label bamboo_label">
                               <div class="bamboo_radio_control_container"></div>
 
                               <h3 class="reward_title bamboo_title">
@@ -256,10 +256,10 @@
                                  list.
                               </p>
 
-                              <span class="num_days_left bamboo_num_days_left modal_pledge_days_count">
-                                 101
+                              <div class="num_days_left bamboo_num_days_left modal_pledge_days_count">
+                                 <span class="modal_num_days"> 101 </span>
                                  <span class="modal_pledge_days_left"> left </span>
-                              </span>
+                              </div>
                            </div>
                         </div>
 
@@ -290,9 +290,9 @@
                      <input type="radio" id="black_reward_id" name="select_reward_radio" class="black_radio" />
 
                      <!-- black edition  pledge modal -->
-                     <div class="black_modal_pledges">
+                     <div class="black_modal_pledges gray_out_modal">
                         <div class="pledge_description_container">
-                           <label for="black_reward_id" class="black_reward reward_label">
+                           <label for="black_reward_id" class="black_reward reward_label black_label">
                               <div class="black_radio_control_container"></div>
 
                               <h3 class="reward_title black_title">
@@ -306,10 +306,10 @@
                                  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer member list. Shipping is included.
                               </p>
 
-                              <span class="num_days_left black_num_days_left modal_pledge_days_count">
-                                 64
+                              <div class="num_days_left black_num_days_left modal_pledge_days_count">
+                                 <span class="modal_num_days"> 64 </span>
                                  <span class="modal_pledge_days_left"> left </span>
-                              </span>
+                              </div>
                            </div>
                         </div>
 
@@ -356,10 +356,10 @@
                                  included.
                               </p>
 
-                              <span class="num_days_left mahogany_num_days_left modal_pledge_days_count">
+                              <div class="num_days_left mahogany_num_days_left modal_pledge_days_count">
                                  0
                                  <span class="modal_pledge_days_left"> left </span>
-                              </span>
+                              </div>
                            </div>
                         </div>
 
